--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+# Bower Components for Test purposes
+#####################
+src/main/webapp/bower_components/
